configured nginx.conf and added ssl certificate

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -23,8 +23,8 @@ server {
     }
 
     # SSL certificate for harbey.mooo.com
-    ssl_certificate /etc/letsencrypt/live/npm-5/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/npm-5/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/npm-1/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/npm-1/privkey.pem;
 
     # Proxy pass settings for services
     location /api {
@@ -104,8 +104,8 @@ server {
     }
 
     # SSL certificate for db.harbey.mooo.com
-    ssl_certificate /etc/letsencrypt/live/npm-6/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/npm-6/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/npm-2/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/npm-2/privkey.pem;
 
     location / {
         proxy_pass http://adminer:8080;  # Adjust Adminer service as needed
@@ -141,11 +141,11 @@ server {
     }
 
     # SSL certificate for proxy.harbey.mooo.com
-    ssl_certificate /etc/letsencrypt/live/npm-7/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/npm-7/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/npm-3/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/npm-3/privkey.pem;
 
     location / {
-        proxy_pass http://nginx:81;  # Adjust proxy service as needed
+        proxy_pass http://proxy_manager:81;  # Adjust proxy service as needed
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
