changed domain and modified nginx.conf

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,12 +1,12 @@
-# Configuration for harbey.mooo.com
+# Configuration for harbeyy.mooo.com
 server {
     listen 80;
-    server_name harbey.mooo.com www.harbey.mooo.com;
+    server_name harbeyy.mooo.com www.harbeyy.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
-        if ($host = 'www.harbey.mooo.com') {
-            return 301 https://harbey.mooo.com$request_uri;
+        if ($host = 'www.harbeyy.mooo.com') {
+            return 301 https://harbeyy.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -15,11 +15,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name harbey.mooo.com www.harbey.mooo.com;
+    server_name harbeyy.mooo.com www.harbeyy.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.harbey.mooo.com') {
-        return 301 https://harbey.mooo.com$request_uri;
+    if ($host = 'www.harbeyy.mooo.com') {
+        return 301 https://harbeyy.mooo.com$request_uri;
     }
 
     # SSL certificate for harbey.mooo.com
@@ -28,7 +28,7 @@ server {
 
     # Proxy pass settings for services
     location /api {
-        proxy_pass http://backend:8000/api;  # Adjust backend service as needed
+        proxy_pass http://backend:8000/api;  
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,8 +59,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /grafana/ {
-    proxy_pass http://localhost:3000/;
+    location /grafana {
+    proxy_pass http://grafana:3000;
     proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -79,15 +79,15 @@ server {
 
 }
 
-# Configuration for db.harbey.mooo.com
+# Configuration for db.harbeyy.mooo.com
 server {
     listen 80;
-    server_name db.harbey.mooo.com www.db.harbey.mooo.com;
+    server_name db.harbeyy.mooo.com www.db.harbeyy.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
-        if ($host = 'www.db.harbey.mooo.com') {
-            return 301 https://db.harbey.mooo.com$request_uri;
+        if ($host = 'www.db.harbeyy.mooo.com') {
+            return 301 https://db.harbeyy.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -96,19 +96,19 @@ server {
 
 server {
     listen 443 ssl;
-    server_name db.harbey.mooo.com www.db.harbey.mooo.com;
+    server_name db.harbeyy.mooo.com www.db.harbeyy.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.db.harbey.mooo.com') {
-        return 301 https://db.harbey.mooo.com$request_uri;
+    if ($host = 'www.db.harbeyy.mooo.com') {
+        return 301 https://db.harbeyy.mooo.com$request_uri;
     }
 
-    # SSL certificate for db.harbey.mooo.com
+    # SSL certificate for db.harbeyy.mooo.com
     ssl_certificate /etc/letsencrypt/live/npm-2/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/npm-2/privkey.pem;
 
     location / {
-        proxy_pass http://adminer:8080;  # Adjust Adminer service as needed
+        proxy_pass http://adminer:8080;  
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -116,15 +116,15 @@ server {
     }
 }
 
-# Configuration for proxy.harbey.mooo.com
+# Configuration for proxy.harbeyy.mooo.com
 server {
     listen 80;
-    server_name proxy.harbey.mooo.com www.proxy.harbey.mooo.com;
+    server_name proxy.harbeyy.mooo.com www.proxy.harbeyy.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
-        if ($host = 'www.proxy.harbey.mooo.com') {
-            return 301 https://proxy.harbey.mooo.com$request_uri;
+        if ($host = 'www.proxy.harbeyy.mooo.com') {
+            return 301 https://proxy.harbeyy.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -133,19 +133,19 @@ server {
 
 server {
     listen 443 ssl;
-    server_name proxy.harbey.mooo.com www.proxy.harbey.mooo.com;
+    server_name proxy.harbeyy.mooo.com www.proxy.harbeyy.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.proxy.harbey.mooo.com') {
-        return 301 https://proxy.harbey.mooo.com$request_uri;
+    if ($host = 'www.proxy.harbeyy.mooo.com') {
+        return 301 https://proxy.harbeyy.mooo.com$request_uri;
     }
 
-    # SSL certificate for proxy.harbey.mooo.com
+    # SSL certificate for proxy.harbeyy.mooo.com
     ssl_certificate /etc/letsencrypt/live/npm-3/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/npm-3/privkey.pem;
+    ssl_certificate_key   /etc/letsencrypt/live/npm-3/privkey.pem;
 
     location / {
-        proxy_pass http://proxy_manager:81;  # Adjust proxy service as needed
+        proxy_pass http://proxy_manager:81;  
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
