--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
-DOMAIN=https://harbey.mooo.com
+DOMAIN=https://harbeyy.mooo.com
 
 # Environment: local, staging, production
 ENVIRONMENT=production 
