--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,12 +1,12 @@
-# Configuration for harbeyy.mooo.com
+# Configuration for harbey.mooo.com
 server {
     listen 80;
-    server_name harbeyy.mooo.com www.harbeyy.mooo.com;
+    server_name harbey.mooo.com www.harbey.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
-        if ($host = 'www.harbeyy.mooo.com') {
-            return 301 https://harbeyy.mooo.com$request_uri;
+        if ($host = 'www.harbey.mooo.com') {
+            return 301 https://harbey.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -15,16 +15,16 @@ server {
 
 server {
     listen 443 ssl;
-    server_name harbeyy.mooo.com www.harbeyy.mooo.com;
+    server_name harbey.mooo.com www.harbey.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.harbeyy.mooo.com') {
-        return 301 https://harbeyy.mooo.com$request_uri;
+    if ($host = 'www.harbey.mooo.com') {
+        return 301 https://harbey.mooo.com$request_uri;
     }
 
     # SSL certificate for harbey.mooo.com
     ssl_certificate /etc/letsencrypt/live/npm-1/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/npm-1/privkey.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/npm-1/privkey.pem;
 
     # Proxy pass settings for services
     location /api {
@@ -79,15 +79,15 @@ server {
 
 }
 
-# Configuration for db.harbeyy.mooo.com
+# Configuration for db.harbey.mooo.com
 server {
     listen 80;
-    server_name db.harbeyy.mooo.com www.db.harbeyy.mooo.com;
+    server_name db.harbey.mooo.com www.db.harbey.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
-        if ($host = 'www.db.harbeyy.mooo.com') {
-            return 301 https://db.harbeyy.mooo.com$request_uri;
+        if ($host = 'www.db.harbey.mooo.com') {
+            return 301 https://db.harbey.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -96,14 +96,14 @@ server {
 
 server {
     listen 443 ssl;
-    server_name db.harbeyy.mooo.com www.db.harbeyy.mooo.com;
+    server_name db.harbey.mooo.com www.db.harbey.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.db.harbeyy.mooo.com') {
-        return 301 https://db.harbeyy.mooo.com$request_uri;
+    if ($host = 'www.db.harbey.mooo.com') {
+        return 301 https://db.harbey.mooo.com$request_uri;
     }
 
-    # SSL certificate for db.harbeyy.mooo.com
+    # SSL certificate for db.harbey.mooo.com
     ssl_certificate /etc/letsencrypt/live/npm-2/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/npm-2/privkey.pem;
 
@@ -116,15 +116,15 @@ server {
     }
 }
 
-# Configuration for proxy.harbeyy.mooo.com
+# Configuration for proxy.harbey.mooo.com
 server {
     listen 80;
-    server_name proxy.harbeyy.mooo.com www.proxy.harbeyy.mooo.com;
+    server_name proxy.harbey.mooo.com www.proxy.harbey.mooo.com;
 
     # Redirect HTTP to HTTPS
     location / {
         if ($host = 'www.proxy.harbeyy.mooo.com') {
-            return 301 https://proxy.harbeyy.mooo.com$request_uri;
+            return 301 https://proxy.harbey.mooo.com$request_uri;
         }
 
         return 301 https://$host$request_uri;
@@ -133,14 +133,14 @@ server {
 
 server {
     listen 443 ssl;
-    server_name proxy.harbeyy.mooo.com www.proxy.harbeyy.mooo.com;
+    server_name proxy.harbey.mooo.com www.proxy.harbey.mooo.com;
 
     # Redirect www to non-www
-    if ($host = 'www.proxy.harbeyy.mooo.com') {
-        return 301 https://proxy.harbeyy.mooo.com$request_uri;
+    if ($host = 'www.proxy.harbey.mooo.com') {
+        return 301 https://proxy.harbey.mooo.com$request_uri;
     }
 
-    # SSL certificate for proxy.harbeyy.mooo.com
+    # SSL certificate for proxy.harbey.mooo.com
     ssl_certificate /etc/letsencrypt/live/npm-3/fullchain.pem;
     ssl_certificate_key   /etc/letsencrypt/live/npm-3/privkey.pem;
 
