--- a/backend/.env
+++ b/backend/.env
@@ -1,15 +1,15 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
-DOMAIN=https://harbeyy.mooo.com
+DOMAIN=harbey.mooo.com
 
 # Environment: local, staging, production
-ENVIRONMENT=production 
+ENVIRONMENT=production
 
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://18.234.111.52,http://18.234.111.52:5173,https://18.234.111.52,https://18.234.111.52:5173"
+BACKEND_CORS_ORIGINS="http://54.226.27.76,http://54.226.27.76:5173,https://54.226.27.76,https://54.226.27.76:5173"
 SECRET_KEY=changethis123
 FIRST_SUPERUSER=chanllenge@devopsdojo.com
 FIRST_SUPERUSER_PASSWORD=devopsdojo57
