--- a/compose.yml
+++ b/compose.yml
@@ -59,6 +59,8 @@ services:
       - 80:80
       - 443:443
       - 81:81
+    environment:
+      DB_SQLITE_FILE: "/data/database.sqlite"
     volumes:
       - data:/data
       - letsencrypt:/etc/letsencrypt
