set up monitoring dashboard

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
-DOMAIN=harbey.mooo.com
+DOMAIN=harbeyy.mooo.com
 
 # Environment: local, staging, production
 ENVIRONMENT=production
@@ -9,7 +9,7 @@ PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://54.226.27.76,http://54.226.27.76:5173,https://54.226.27.76,https://54.226.27.76:5173"
+BACKEND_CORS_ORIGINS="http://54.159.253.249,http://54.159.253.249:5173,https://54.159.253.249,https://54.159.253.249:5173"
 SECRET_KEY=changethis123
 FIRST_SUPERUSER=chanllenge@devopsdojo.com
 FIRST_SUPERUSER_PASSWORD=devopsdojo57
